tests/negative/semantic/wrong_arg_count_readlines/input.ci
void main() {
    print(toString(readLines()) + "\n");
}
